<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorBackground"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layoutHeader"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16ssp"
                android:textColor="@color/colorTextIcons"
                android:fontFamily="@font/ubuntu_bold"
                android:includeFontPadding="false"
                android:text="@string/welcome_to"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:fontFamily="@font/ubuntu_bold"
                android:includeFontPadding="false"
                android:text="@string/app_name"
                android:textColor="@color/colorTextIcons"
                android:textSize="@dimen/_16ssp"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/textSignInLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/ubuntu_regular"
            android:includeFontPadding="false"
            android:text="@string/sign_in_to_your_account"
            android:textColor="@color/colorPrimaryText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutHeader"
            android:textSize="@dimen/_15ssp"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:cardCornerRadius="@dimen/_4sdp"
            app:layout_constraintTop_toBottomOf="@id/textSignInLabel">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_4sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:text="@string/email"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/_11ssp" />

                <EditText
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@null"
                    android:fontFamily="@font/ubuntu_regular"
                    android:hint="@string/name_example_com"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorHintText"
                    android:textSize="@dimen/_13ssp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:text="@string/password"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/_11ssp" />

                <EditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:background="@null"
                    android:fontFamily="@font/ubuntu_regular"
                    android:hint="@string/password_hint"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorHintText"
                    android:textSize="@dimen/_13ssp"
                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/ubuntu_bold"
            android:includeFontPadding="false"
            android:text="@string/sign_in"
            android:textColor="@color/colorTextIcons"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintTop_toBottomOf="@id/cardSignIn"
            tools:layout_editor_absoluteX="0dp" />

        <ProgressBar
            android:id="@+id/signInProgressBar"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/buttonSignIn"
            app:layout_constraintEnd_toEndOf="@+id/buttonSignIn"
            app:layout_constraintStart_toStartOf="@+id/buttonSignIn"
            app:layout_constraintTop_toTopOf="@id/buttonSignIn"
            />
        <TextView
            android:id="@+id/textNoAccount"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/don_t_have_an_account_yet"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="@font/ubuntu_regular"
            android:includeFontPadding="false"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/buttonSignIn"
            android:textColor="@color/colorPrimaryText" />

        <TextView
            android:id="@+id/textSignUp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/sign_up_underline"
            android:textSize="@dimen/_15ssp"
            android:fontFamily="@font/ubuntu_bold"
            android:padding="@dimen/_6sdp"

            android:includeFontPadding="false"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textNoAccount"
            android:textColor="@color/colorAccent"
            android:textAllCaps="true"/>

        <Button
            android:id="@+id/signInGoogle"
            android:layout_width="200dp"
            android:layout_height="65dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:drawableLeft="@drawable/ic_google"
            android:padding="15dp"
            android:text="Google"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            app:cornerRadius="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textSignUp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
